src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>CampaignMemberCount__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CampaignMember Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo_Request__c</fullName>
        <description>For BAP-3811 - Create Trigger for updating Demo Requested Date field</description>
        <formula>OR(
CONTAINS(UPPER(Campaign.Name), &apos;DEMO REQUEST&apos;),  /* The campaign name has the words demo request in it */
ISPICKVAL(Status,&apos;Demo Requested&apos;) /* The Status is demo requested */
)</formula>
        <inlineHelpText>Calculates if the campaign member is part of a demo request campaign</inlineHelpText>
        <label>Demo Request?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dialer_Sync_Status__c</fullName>
        <description>This is updated by the dialer job indicating whether the campaign member is synced to the dialer as part of this campaign.</description>
        <inlineHelpText>This is updated by the dialer job indicating whether the campaign member is synced to the dialer as part of this campaign.</inlineHelpText>
        <label>Dialer Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>Dialer Synced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dialer Not Synced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dialer Max Attempts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>